further minor push to complete previous refactor